<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".firstRun">


    <TextView
        android:text="@string/sample"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/grey_600"
        android:text="@string/sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/passHint"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passAgain"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:hint="@string/passAgainHint"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/grey_600"
        android:text="@string/chooseHintQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinQ"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/ans"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/grey_600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ansQ"
        android:layout_marginTop="10dp"
        android:hint="@string/fillUpHintA"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        android:background="@color/blue_500"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
</LinearLayout>
