<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:layout_marginTop="60dp"
            android:textSize="45sp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/app_tag"
            android:textColor="@color/grey_800"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/entryPass"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:hint="@string/enterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/enterBtn"
            android:textColor="@color/white"
            android:paddingRight="30dp"
            android:background="@color/orange_500"
            android:layout_marginTop="25dp"
            android:text="@string/enterPass"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_action_forward"
            android:drawableEnd="@drawable/ic_action_forward"
            android:drawablePadding="-30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/forgetBtn"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:drawableRight="@drawable/ic_action_help"
            android:drawablePadding="-30dp"
            android:text="@string/forgetPass"
            android:background="@color/orange_500"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
